resolve #2875 Preview tab: Empty survey message is not aligned

--- a/packages/survey-creator-core/src/components/tabs/translation.scss
+++ b/packages/survey-creator-core/src/components/tabs/translation.scss
@@ -20,17 +20,7 @@
 }
 
 .st-no-strings {
-  font-family: $font-family;
-  font-style: normal;
-  font-weight: 400;
-  font-size: calcSize(2);
-  color: $foreground;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  overflow: hidden;
+  @include centerText;
 }
 
 .st-content {
